@@ -1,4 +1,5 @@
 0.07
+ - Rewrite implicit encode() to PYX::Utils::encode().
 
 0.06 2020-10-14T09:13:41+02:00
  - Add tests for finalize().
